2010-11-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-04
	* allow include statements in configuration files parsed by
	CommandLine.

2010-11-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-03
	* vector parameter extension now also works in config files

2010-11-09  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-02
	* CommandLine: alrady defined vector parameters can now be
	extended. Example: prog_x -vec 0 1 2 -vec+ 3

2010-10-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* pick up changes by Hauke

2010-07-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* CommandLine: the elements passed to a vector-type parameters
	must from now on be passed separated by blanks (spaces), NOT
	commas!
	* This means on the other hand that single string elements of a
	vector can contain commas

2010-04-26  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05
	* add jet_calcxsec_x tool, which calculates the effective
	cross-sections to properly combine *inclusuve* QCD samples, which
	are produced with a lower but no upper pthat boundary

2010-04-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-04
	* various updates to jih & jig (Hauke & Philipp)

2010-04-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-03
	* add config/ directory, containing several useful configuration
	files to be used with jet_inspect_profiles_x
	* example: jet_inspect_profiles_x jip_vseta.config jip_ptrsp.config -inputs ...
	* the above example will draw the closure of the pt response as a
	function of eta for several pT ranges
	
	* tag V00-07-02
	* improvements to jet_inspect_profiles_x
	* add parameter 'opath' to jet_inspect_histos_x
	* add parameter 'opath' to jet_inspect_graphs_x

2010-04-01  Andreas Hinzmann  <hinzmann@cern.ch>

	* change 'buh' error message
