@@ -1,3 +1,8 @@
+2010-12-07  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-08-05
+	* CommandLine tuning
+
 2010-11-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-08-04
